test-output/src/tests/snapshots/test_output__tests__output__string_prefix_rest_switches.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

// A clause mixing a guarded string-prefix pattern with overlapping string
// literals makes the compiled decision tree switch on the prefix's rest.
// Found by the differential fuzzer: native lowering has no materialized
// subject for a rest variable and must fold the accumulated prefix into
// the base subject's checks instead.
pub fn main() -> Nil {
  echo classify(#("rn", 56))
  echo classify(#("rn", 61))
  echo classify(#("rx", 61))
  echo classify(#("rnx", 56))
  echo classify(#("rz", 56))
  echo classify(#("q", 56))
  echo deep("rna")
  echo deep("rnb")
  echo deep("rn")
  echo deep("rq")
  Nil
}

fn classify(pair: #(String, Int)) -> Int {
  case pair {
    #("r" <> rest, 61) if rest != "x" -> 1
    #("rn", 56) -> 2
    #("r" <> _, 56) -> 3
    _ -> 0
  }
}

fn deep(text: String) -> Int {
  case text {
    "r" <> rest if rest == "q" -> 10
    "rna" -> 11
    "rn" <> _ -> 12
    "r" <> _ -> 13
    _ -> 14
  }
}


--- gleam run output ----------------
[90msrc/main.gleam:10[39m
2
[90msrc/main.gleam:11[39m
1
[90msrc/main.gleam:12[39m
0
[90msrc/main.gleam:13[39m
3
[90msrc/main.gleam:14[39m
3
[90msrc/main.gleam:15[39m
0
[90msrc/main.gleam:16[39m
11
[90msrc/main.gleam:17[39m
12
[90msrc/main.gleam:18[39m
12
[90msrc/main.gleam:19[39m
10
