test-output/src/tests/snapshots/test_output__tests__output__todo_unimplemented.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

pub fn main() -> Nil {
  todo
}


--- exit status ---------------------
1

--- standard output -----------------

--- standard error ------------------
runtime error: todo

This has not yet been implemented

    main.main:5
