test-output/src/tests/snapshots/test_output__tests__output__tuples.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

fn swap(pair: #(Int, Int)) -> #(Int, Int) {
  case pair {
    #(first, second) -> #(second, first)
  }
}

fn scale(point: #(Float, Float), factor: Float) -> #(Float, Float) {
  #(point.0 *. factor, point.1 *. factor)
}

fn describe(pair: #(Int, String)) -> String {
  case pair {
    #(1, word) -> "one " <> word
    #(_, word) if pair.0 > 100 -> "many " <> word
    #(_, word) -> "some " <> word
  }
}

pub fn main() -> Nil {
  // Access, including nested tuples.
  let nested = #(1, #(2, 3))
  echo nested.0
  echo nested.1.0 + nested.1.1

  // Destructuring and reconstruction.
  let swapped = swap(#(40, 2))
  echo swapped.0 - swapped.1

  // Mixed element types and tuple index in guards.
  echo describe(#(1, "apple"))
  echo describe(#(999, "grapes"))
  echo describe(#(7, "pears"))

  // Tuples of floats through a function.
  let scaled = scale(#(1.5, 2.5), 1.5)
  echo scaled.0
  echo scaled.1
  Nil
}


--- gleam run output ----------------
[90msrc/main.gleam:25[39m
1
[90msrc/main.gleam:26[39m
5
[90msrc/main.gleam:30[39m
-38
[90msrc/main.gleam:33[39m
"one apple"
[90msrc/main.gleam:34[39m
"many grapes"
[90msrc/main.gleam:35[39m
"some pears"
[90msrc/main.gleam:39[39m
2.25
[90msrc/main.gleam:40[39m
3.75
